apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
       app: qbittorrent
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: torrent-tcp
            - containerPort: 6881
              protocol: UDP
              name: torrent-udp
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - name: qbit-config
              mountPath: /config
            - name: media-downloads
              mountPath: /downloads
      volumes:
        - name: qbit-config
          hostPath:
            path: /home/philip/jellyfin/qbittorrent_config_k8s
        - name: media-downloads
          hostPath:
            path: /home/philip/jellyfin/downloads
