apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - port: 8081
      targetPort: 8081
      name: http
